<!--
  ~ Copyright 2018 The app Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<androidx.preference.PreferenceScreen
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ListPreference
        app:key="init_size"
        app:title="@string/pref_init_size_title"
        app:summary="@string/pref_init_size_desc"
        app:defaultValue="bits32"
        app:entries="@array/size_labels"
        app:entryValues="@array/size_values"
        app:useSimpleSummaryProvider="true" />

    <SwitchPreferenceCompat
        app:key="digit_group"
        app:title="@string/pref_digits_sep_title"
        app:summary="@string/pref_digits_sep_desc"
        app:defaultValue="true"
        app:useSimpleSummaryProvider="true" />

</androidx.preference.PreferenceScreen>
